# RustyArm

./: .gdbinit  Cargo.toml  build.rs  entry.S  link.ld
.cargo/: config.toml
src/: gpio.rs  main.rs  uart.rs
src/arch/: aarch64.rs
src/arch/aarch64/: boot.rs  regs.rs
