[package]
name = "rusty_arm"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = "1.0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[build-dependencies]
cc = "1.0"
